packages/internet-header/src/components/post-logo/post-logo.scss
@use '@swisspost/design-system-styles/variables/color';
@use '../../utils/utils.scss';
@use '../../utils/mixins.scss';

:host {
  display: block;
  aspect-ratio: 1/1;
}

.logo {
  display: block;
  align-items: center;
  background: color.$yellow;

  svg {
    display: block;
    width: 100%;
    height: 100%;
  }
}

